--- a/style.css
+++ b/style.css
@@ -307,4 +307,33 @@ p{
 .app__heading{
     margin-top: 250px;
 }
+body{
+    background-color: #f7f2ee !important;
+}
+.download__heading{
+    padding-top: 250px;
+}
+.input__radio{
+    display: none;
+}
+.range{
+   margin-left: 20px;
+}
+.input__range{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 50px;
+}
+.change__theme{
+    padding: 18px 70px;
+}
+.input__name {
+    font-size: 20px;
+    padding-right: 25px;
+}
+
+.settings_heading{
+    font-size: 28px;
+}
 }
